--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Aula 15/09 - Menu - Tabela</title>
+    <title>Menu - Tabela</title>
 
     <!-- ícone na aba -->
     <link rel="shortcut icon" href="./images/robot.svg" type="image/x-icon">
